# rosterer

./: CMakeLists.txt  LICENSE  conanfile.txt  sample_roster.csv  sample_staff.csv
src/: InitialRosterManager.cpp  InitialRosterManager.hpp  MoveGenerator.cpp  MoveGenerator.hpp  Objective.cpp  Objective.hpp  Solution.cpp  Solution.hpp  Staff.cpp  Staff.hpp  StaffManager.cpp  StaffManager.hpp  main.cpp
